# ep-stats

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  architecture.html  architecture.md  index.html  index.md  mkdocs.yml  objects.inv  principles.html  principles.md  pyproject.toml  requirements.txt  resources.html  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  python-publish.yml  testing.yml
api/: check.html  check.md  dao.html  dao.md  dao_factory.html  dao_factory.md  evaluation.html  evaluation.md  experiment.html  experiment.md  metric.html  metric.md  srm_check.html  srm_check.md  statistics.html  test_data.html
docs/: architecture.md  index.md  principles.md  resources.md
docs/api/: check.md  statistics.md  test_data.md
docs/stats/: basics.md  ctr.md  multiple.md  outliers.md  sample_size.md  sequential.md
docs/user_guide/: ab_test_simple_evaluation.ipynb  aggregation.md  configuring_api.md  ep_in_python.ipynb  test_data.md
presentations/architecture/: architecture.html  architecture.md
search/: search_index.json
src/epstats/: __init__.py  config.py  locust.py  main.py  prometheus.py
src/epstats/server/: __init__.py  api.py  api_evaluate.py  api_sample_size_calculation.py  api_settings.py  json_response.py  req.py  res.py
src/epstats/toolkit/: __init__.py  check.py  dao.py  experiment.py  metric.py  parser.py  results.py  statistics.py  utils.py
src/epstats/toolkit/testing/: __init__.py  test_dao.py  test_data.py  utils.py
src/epstats/toolkit/testing/resources/: evaluations_checks.csv  evaluations_exposures.csv  evaluations_metrics.csv  goals_agg.csv  goals_by_unit.csv  goals_simple_agg.csv
stats/: basics.html  basics.md  compound_metrics.html  compound_metrics.md  ctr.html  multiple.html  sample_size.html  sample_size.md  sequential.html
tests/epstats/server/: depend.py  test_api_evaluate.py  test_api_sample_size_calculation.py  test_req.py
tests/epstats/toolkit/: test_check.py  test_experiment.py  test_experiment_docstring.py  test_outlier_winsorization.py  test_parser.py  test_statistics.py
user_guide/: ab_test_simple_evaluation.html  aggregation.html  aggregation.md  configuring_api.html  configuring_api.md  ep_in_python.html  ep_in_python.ipynb  protocol.html  protocol.md  quick_start.html  quick_start.md  test_data.html  test_data.md
