[project]
name = "ep-stats"
version = "2.5.7"
description = "Statistical package for controlled experimentation"
readme = "README.md"
authors = [
    { name = "Ondra Zahradník", email = "ondra.zahradnik@gmail.com" },
    { name = "Jan Červenka", email = "jan.cervenka1@gendigital.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "pandas>=2.2.3",
    "prometheus-client>=0.21.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyparsing>=3.2.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epstats"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.7",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.28.2",
    "pre-commit>=4.1.0",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.14.3",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
