[metadata]
name = ep-stats
version = 0.3.5
description = Statistical package to evaluate ab tests in experimentation platform.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ondrej Zahradnik
author_email = ondrej.zahradnik@avast.com
url = https://github.com/avast/ep-stats

classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.7

package_dir=
    =src
packages=find:

# Requirements
setup_requires =
    pip-tools>=5.3.1

install_requires =
    pandas>=1.0.1
    scipy>=1.4.1
    statsd==3.3.0
    pyparsing==2.4.6
    statsd==3.3.0
    fastapi==0.60.1
    uvicorn==0.11.7
    pydantic==1.6.1
    statsmodels==0.11.1

tests_require =
    pytest==6.0.1
    requests==2.23.0

[options.extras_require]
dev =
    mkdocs>=1.1.2
    mkdocs-material>=5.3.0
    mkdocs-material-extensions>=1.0
    mkdocstrings>=0.12.2
    mkdocs-jupyter>=0.13.0
    pre-commit>=2.6.0
    flake8>=3.8.3
    brunette>=0.1.7
    pytest==6.0.1
    requests==2.23.0
    pygments==2.6.1
    pymdown-extensions==7.1
    pip-tools>=5.3.1
test =
    flake8>=3.8.3
    brunette>=0.1.7
    pytest==6.0.1
    requests==2.23.0


# Data files
[options.package_data]
* = *.txt


[options.packages.find]
where=src

# Pytest integration with setup.py (see Pytest documentation)
[aliases]
test=pytest

# Pytest options
[tool:pytest]
addopts = --verbose
python_classes =
xfail_strict = true
junit_family=xunit1

[tool:brunette]
line-length = 120
verbose = true
single-quotes = true

[flake8]
max-line-length = 120
per-file-ignores =
    __init__.py:F401,
    experiment.py:W605,E501,
    statistics.py:E501,
