[metadata]
name = ep-stats
version = 1.7.4
description = Statistical package to evaluate ab tests in experimentation platform.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ondrej Zahradnik
author_email = ondrej.zahradnik@avast.com
url = https://github.com/avast/ep-stats

classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.7

package_dir=
    =src
packages=find:

# Requirements
setup_requires =
    pip-tools>=5.3.1

install_requires =
    pandas>=1.3.5
    scipy>=1.7.3
    statsd==3.3.0
    pyparsing==2.4.6
    statsd==3.3.0
    fastapi==0.95.2
    uvicorn==0.17.6
    pydantic>=1.8.2
    statsmodels==0.13.5

tests_require =
    pytest==7.0.1
    httpx
    jinja2

[options.extras_require]
dev =
    mkdocs
    mkdocs-jupyter
    mkdocs-material
    mkdocs-material-extensions
    mkdocstrings<0.19
    pygments
    pymdown-extensions
    pre-commit>=2.6.0
    flake8>=3.8.3
    brunette>=0.1.7
    pytest==7.0.1
    requests==2.23.0
    pip-tools>=5.3.1
    bandit

test =
    flake8>=3.8.3
    brunette>=0.1.7
    pytest==7.0.1
    requests==2.23.0
    jinja2
    bandit


# Data files
[options.package_data]
* = *.txt, *.csv


[options.packages.find]
where=src

# Pytest integration with setup.py (see Pytest documentation)
[aliases]
test=pytest

# Pytest options
[tool:pytest]
addopts = --verbose
python_classes =
xfail_strict = true
junit_family=xunit1

[tool:brunette]
line-length = 120
verbose = true

[flake8]
max-line-length = 120
ignore =
    E231
    W503
per-file-ignores =
    __init__.py:F401,
    experiment.py:W605,E501,
    statistics.py:E501,
